feat: manage leave types
